--- a/src/App.scss
+++ b/src/App.scss
@@ -31,6 +31,39 @@
 
   .content {
     margin-top: 20px;
-    color: wheat;
+    width: 1200px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    color: #ffffff;
+
+    .planet {
+      width: 250px;
+      height: 200px;
+      font-size: 20px;
+      margin-right: 35px;
+      border: 1px solid rgba(235, 146, 236, 0.8);
+      border-radius: 8px;
+      padding: 15px 10px;
+      margin-bottom: 10px;
+      text-align: center;
+      font-family: "Coustard", serif;
+      cursor: pointer;
+
+      &__name {
+        margin-bottom: 10px;
+      }
+
+      &__gravity {
+        margin-bottom: 10px;
+      }
+
+      &__climate {
+        margin-bottom: 10px;
+      }
+
+      &__population {
+      }
+    }
   }
 }
